# wardnc

./: CMakeLists.txt  Makefile
config/: colors.css  config.toml  style.css
scripts/: reload-wardnc  restart-wardnc  toggle-wardnc
src/: NotificationCenterPanel.cpp  NotificationCenterPanel.h  NotificationServer.cpp  NotificationServer.h  NotificationTypes.h  WardNcConfig.cpp  WardNcConfig.h  WardNcControl.cpp  WardNcControl.h  main.cpp
